Edit for 1.4.6 & new import system