@@ -1,5 +1,13 @@
 package fr.richie.Regen3000;
 
+import net.minecraft.server.v1_4_6.*;
+import org.bukkit.Bukkit;
+import org.bukkit.World;
+import org.bukkit.World.Environment;
+import org.bukkit.WorldCreator;
+import org.bukkit.craftbukkit.v1_4_6.CraftServer;
+import org.bukkit.generator.ChunkGenerator;
+
 import java.io.File;
 import java.io.IOException;
 import java.util.Calendar;
@@ -8,31 +16,13 @@ import java.util.Random;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
-import net.minecraft.server.ConvertProgressUpdater;
-import net.minecraft.server.Convertable;
-import net.minecraft.server.EntityTracker;
-import net.minecraft.server.EnumGamemode;
-import net.minecraft.server.MinecraftServer;
-import net.minecraft.server.ServerNBTManager;
-import net.minecraft.server.WorldLoaderServer;
-import net.minecraft.server.WorldManager;
-import net.minecraft.server.WorldServer;
-import net.minecraft.server.WorldSettings;
-
-import org.bukkit.Bukkit;
-import org.bukkit.World;
-import org.bukkit.WorldCreator;
-import org.bukkit.World.Environment;
-import org.bukkit.craftbukkit.CraftServer;
-import org.bukkit.generator.ChunkGenerator;
-
 
 public class RMUtils {
-	static World createWorld(String wName, boolean forceemerald){
+	static World createWorld(String wName, boolean forceemerald) {
 
 		WorldCreator creator = WorldCreator.name(wName.toLowerCase()).environment(Environment.NORMAL).seed(new Random().nextLong()).generateStructures(false);
 
-		CraftServer cs = (CraftServer)Bukkit.getServer();
+		CraftServer cs = (CraftServer) Bukkit.getServer();
 
 		MinecraftServer console = cs.getServer();
 
@@ -41,7 +31,7 @@ public class RMUtils {
 		ChunkGenerator generator = creator.generator();
 		File folder = new File(cs.getWorldContainer(), name);
 		World world = cs.getWorld(name);
-		net.minecraft.server.WorldType type = net.minecraft.server.WorldType.getType(creator.type().getName());
+		WorldType type = WorldType.getType(creator.type().getName());
 		boolean generateStructures = creator.generateStructures();
 
 		if (world != null) {
@@ -79,18 +69,18 @@ public class RMUtils {
 		WorldServer internal = new WorldServer(console, new ServerNBTManager(cs.getWorldContainer(), name, true), name, dimension, new WorldSettings(creator.seed(), EnumGamemode.a(cs.getDefaultGameMode().getValue()), generateStructures, hardcore, type), console.methodProfiler, creator.environment(), generator);
 
 		//cs.getHandle().getServer().getServer()
-		
+
 		//cs.getW
-		
-		if (cs.getWorld(name.toLowerCase())==null) {
+
+		if (cs.getWorld(name.toLowerCase()) == null) {
 			return null;
 		}
 
-		if(forceemerald){
+		if (forceemerald) {
 			internal.worldProvider.d = new RMWorldChunkManager(internal);
 		}
-		
-		internal.worldMaps = ((WorldServer)console.worlds.get(0)).worldMaps;
+
+		internal.worldMaps = ((WorldServer) console.worlds.get(0)).worldMaps;
 
 		internal.tracker = new EntityTracker(internal);
 		internal.addIWorldAccess(new WorldManager(console, internal));
@@ -112,10 +102,9 @@ public class RMUtils {
 		return created;
 	}
 
-
-	static void removeWorld(String wName){
+	static void removeWorld(String wName) {
 		World w = Bukkit.getWorld(wName);
-		if(w!=null){
+		if (w != null) {
 
 			//File folder = w.getWorldFolder();
 
@@ -144,18 +133,18 @@ public class RMUtils {
 	}
 
 	@Deprecated
-	static void forceRemoveWorld(String wName){
+	static void forceRemoveWorld(String wName) {
 
 		//Bukkit.broadcastMessage("rm -Rf "+Bukkit.getServer().getWorldContainer().getAbsolutePath()+"/"+wName);
 
-		if(wName.equals(".") || wName.equals("..") || wName.equals("") || wName.contains("/")) return;
+		if (wName.equals(".") || wName.equals("..") || wName.equals("") || wName.contains("/")) return;
 
 
 		try {
-			if(File.separator.equals("/")){
-				Runtime.getRuntime().exec(new String[]{"rm", "-Rf", Bukkit.getServer().getWorldContainer().getAbsolutePath()+"/"+wName });
-			}else{
-				Runtime.getRuntime().exec("CMD /C DEL /F /S /Q \""+Bukkit.getServer().getWorldContainer().getAbsolutePath()+"\\"+wName+"\"");				
+			if (File.separator.equals("/")) {
+				Runtime.getRuntime().exec(new String[]{"rm", "-Rf", Bukkit.getServer().getWorldContainer().getAbsolutePath() + "/" + wName});
+			} else {
+				Runtime.getRuntime().exec("CMD /C DEL /F /S /Q \"" + Bukkit.getServer().getWorldContainer().getAbsolutePath() + "\\" + wName + "\"");
 			}
 
 		} catch (IOException e) {
@@ -164,21 +153,20 @@ public class RMUtils {
 
 	}
 
-
 	public static void cleanRegenWorlds() {
 
 		File worldContainer = Bukkit.getWorldContainer();
 
 		if (worldContainer.isDirectory()) {
-			for (File c : worldContainer.listFiles()){
-				if(c.isDirectory() && c.getName().toLowerCase().startsWith("rmregen_")){
+			for (File c : worldContainer.listFiles()) {
+				if (c.isDirectory() && c.getName().toLowerCase().startsWith("rmregen_")) {
 					delete(c);
 				}
 			}
 		}
 	}
 
-	public static long getNbMinutesFromTime(String str) throws Exception{
+	public static long getNbMinutesFromTime(String str) throws Exception {
 		Pattern timePattern = Pattern.compile("(?:([0-9]+)\\s*y[a-z]*[,\\s]*)?(?:([0-9]+)\\s*mo[a-z]*[,\\s]*)?(?:([0-9]+)\\s*w[a-z]*[,\\s]*)?(?:([0-9]+)\\s*d[a-z]*[,\\s]*)?(?:([0-9]+)\\s*h[a-z]*[,\\s]*)?(?:([0-9]+)\\s*m[a-z]*[,\\s]*)?(?:([0-9]+)\\s*(?:s[a-z]*)?)?", 2);
 
 		Matcher m = timePattern.matcher(str);
@@ -190,14 +178,11 @@ public class RMUtils {
 		int minutes = 0;
 		int seconds = 0;
 		boolean found = false;
-		while (m.find())
-		{
-			if ((m.group() == null) || (m.group().isEmpty()))
-			{
+		while (m.find()) {
+			if ((m.group() == null) || (m.group().isEmpty())) {
 				continue;
 			}
-			for (int i = 0; i < m.groupCount(); i++)
-			{
+			for (int i = 0; i < m.groupCount(); i++) {
 				if ((m.group(i) == null) || (m.group(i).isEmpty()))
 					continue;
 				found = true;
@@ -206,28 +191,22 @@ public class RMUtils {
 
 			if (!found)
 				continue;
-			if ((m.group(1) != null) && (!m.group(1).isEmpty()))
-			{
+			if ((m.group(1) != null) && (!m.group(1).isEmpty())) {
 				years = Integer.parseInt(m.group(1));
 			}
-			if ((m.group(2) != null) && (!m.group(2).isEmpty()))
-			{
+			if ((m.group(2) != null) && (!m.group(2).isEmpty())) {
 				months = Integer.parseInt(m.group(2));
 			}
-			if ((m.group(3) != null) && (!m.group(3).isEmpty()))
-			{
+			if ((m.group(3) != null) && (!m.group(3).isEmpty())) {
 				weeks = Integer.parseInt(m.group(3));
 			}
-			if ((m.group(4) != null) && (!m.group(4).isEmpty()))
-			{
+			if ((m.group(4) != null) && (!m.group(4).isEmpty())) {
 				days = Integer.parseInt(m.group(4));
 			}
-			if ((m.group(5) != null) && (!m.group(5).isEmpty()))
-			{
+			if ((m.group(5) != null) && (!m.group(5).isEmpty())) {
 				hours = Integer.parseInt(m.group(5));
 			}
-			if ((m.group(6) != null) && (!m.group(6).isEmpty()))
-			{
+			if ((m.group(6) != null) && (!m.group(6).isEmpty())) {
 				minutes = Integer.parseInt(m.group(6));
 			}
 			if ((m.group(7) == null) || (m.group(7).isEmpty()))
@@ -235,31 +214,29 @@ public class RMUtils {
 			seconds = Integer.parseInt(m.group(7));
 		}
 
-		if (!found)
-		{
+		if (!found) {
 			throw new Exception("Format incorrect");
 		}
 
-		if(seconds > 0){
+		if (seconds > 0) {
 			throw new Exception("Secondes interdites");
 		}
 
-		if(years > 0){
-			throw new Exception("Années interdites");
-		}			
+		if (years > 0) {
+			throw new Exception("Annï¿½es interdites");
+		}
 
-		if(months > 0){
+		if (months > 0) {
 			throw new Exception("Mois interdits");
 		}
 
-		int nbMinutes = (weeks*7+days)*24*60+hours*60+minutes;
+		int nbMinutes = (weeks * 7 + days) * 24 * 60 + hours * 60 + minutes;
 
 		return nbMinutes;
 
 	}
 
-	public static long getFutureTime(String time) throws Exception
-	{
+	public static long getFutureTime(String time) throws Exception {
 		boolean future = true;
 
 		Pattern timePattern = Pattern.compile("(?:([0-9]+)\\s*y[a-z]*[,\\s]*)?(?:([0-9]+)\\s*mo[a-z]*[,\\s]*)?(?:([0-9]+)\\s*w[a-z]*[,\\s]*)?(?:([0-9]+)\\s*d[a-z]*[,\\s]*)?(?:([0-9]+)\\s*h[a-z]*[,\\s]*)?(?:([0-9]+)\\s*m[a-z]*[,\\s]*)?(?:([0-9]+)\\s*(?:s[a-z]*)?)?", 2);
@@ -273,14 +250,11 @@ public class RMUtils {
 		int minutes = 0;
 		int seconds = 0;
 		boolean found = false;
-		while (m.find())
-		{
-			if ((m.group() == null) || (m.group().isEmpty()))
-			{
+		while (m.find()) {
+			if ((m.group() == null) || (m.group().isEmpty())) {
 				continue;
 			}
-			for (int i = 0; i < m.groupCount(); i++)
-			{
+			for (int i = 0; i < m.groupCount(); i++) {
 				if ((m.group(i) == null) || (m.group(i).isEmpty()))
 					continue;
 				found = true;
@@ -289,28 +263,22 @@ public class RMUtils {
 
 			if (!found)
 				continue;
-			if ((m.group(1) != null) && (!m.group(1).isEmpty()))
-			{
+			if ((m.group(1) != null) && (!m.group(1).isEmpty())) {
 				years = Integer.parseInt(m.group(1));
 			}
-			if ((m.group(2) != null) && (!m.group(2).isEmpty()))
-			{
+			if ((m.group(2) != null) && (!m.group(2).isEmpty())) {
 				months = Integer.parseInt(m.group(2));
 			}
-			if ((m.group(3) != null) && (!m.group(3).isEmpty()))
-			{
+			if ((m.group(3) != null) && (!m.group(3).isEmpty())) {
 				weeks = Integer.parseInt(m.group(3));
 			}
-			if ((m.group(4) != null) && (!m.group(4).isEmpty()))
-			{
+			if ((m.group(4) != null) && (!m.group(4).isEmpty())) {
 				days = Integer.parseInt(m.group(4));
 			}
-			if ((m.group(5) != null) && (!m.group(5).isEmpty()))
-			{
+			if ((m.group(5) != null) && (!m.group(5).isEmpty())) {
 				hours = Integer.parseInt(m.group(5));
 			}
-			if ((m.group(6) != null) && (!m.group(6).isEmpty()))
-			{
+			if ((m.group(6) != null) && (!m.group(6).isEmpty())) {
 				minutes = Integer.parseInt(m.group(6));
 			}
 			if ((m.group(7) == null) || (m.group(7).isEmpty()))
@@ -318,39 +286,31 @@ public class RMUtils {
 			seconds = Integer.parseInt(m.group(7));
 		}
 
-		if (!found)
-		{
+		if (!found) {
 			throw new Exception("Format incorrect");
 		}
 
 
 		Calendar c = new GregorianCalendar();
-		if (years > 0)
-		{
+		if (years > 0) {
 			c.add(1, years * (future ? 1 : -1));
 		}
-		if (months > 0)
-		{
+		if (months > 0) {
 			c.add(2, months * (future ? 1 : -1));
 		}
-		if (weeks > 0)
-		{
+		if (weeks > 0) {
 			c.add(3, weeks * (future ? 1 : -1));
 		}
-		if (days > 0)
-		{
+		if (days > 0) {
 			c.add(5, days * (future ? 1 : -1));
 		}
-		if (hours > 0)
-		{
+		if (hours > 0) {
 			c.add(11, hours * (future ? 1 : -1));
 		}
-		if (minutes > 0)
-		{
+		if (minutes > 0) {
 			c.add(12, minutes * (future ? 1 : -1));
 		}
-		if (seconds > 0)
-		{
+		if (seconds > 0) {
 			c.add(13, seconds * (future ? 1 : -1));
 		}
 		return c.getTimeInMillis();
